--- a/index.html
+++ b/index.html
@@ -58,9 +58,11 @@
                    cityLocation.innerHTML = cityValue;
                    temperature.innerHTML = c;
                    leadText.innerHTML = descriptionValue;
+                   locationInput.value ='';
                 })
                 .catch(err => alert('Please give a valid city name!'))
-        })
+        });
+
         
 
     </script>
